Update ProductReviewAnalyzer.java